@@ -1,6 +1,8 @@
 [1.7.3]
 - API Change: Rewrote FreeType shadow rendering (much better).
 - Added spaceX/Y to FreeType fonts.
+- Higher quality FreeType font rendering.
+- Hiero updated to v5, now with FreeType support and other new features!
 
 [1.7.2]
 - Added AndroidAudio#newMusic(FileDescriptor) to allow loading music from a file descriptor, see #2970
